# crucyble

./: .gitignore  .travis.yml  Makefile  README.md  build.py  pyproject.toml  setup.py
etc/: classifiers.txt
src/crucyble/: __init__.py  decorators.py  glove.py  logging.py  stages.py  types.py  verbosity.py
src/crucyble/lib/: __init__.py
src/lib/: _cooccur.pxd  _glove.pxd  _shuffle.pxd  _vocab_count.pxd  cglove.pxd  cooccur.c  cooccur.pyx  cyglove.c  cyglove.pyx  glove.c  glove.pyx  shuffle.c  shuffle.pyx  vocab_count.c  vocab_count.pyx
src/lib/glove/: cooccur.c  cooccur.h  glove.c  glove.h  shuffle.c  shuffle.h  vocab_count.c  vocab_count.h
test/: test_glove.py  test_glove.sh  util.py
